@@ -3,6 +3,8 @@ Apache SIS Change Log
 
 Release 0.3-incubating - Current Development
 
+* SIS-38 Add the missing documentation comments for SIS-core 
+  storage (Charitha Madusanka via mattmann)
 
 Release 0.2-incubating - 03/08/2012
 
